# norm_autocorr

./: CMakeLists.txt  README.md  norm_autocorr.pc.in
include/: NormAutoGPU.cuh  NormAutocorrGPU.cuh  NormAutocorrGPU.hpp  device_allocator.hpp  man_vec_file_io_funcs.hpp  managed_allocator_global.hpp  managed_allocator_host.hpp  my_args.hpp  my_comparators.hpp  my_cuda_utils.hpp  my_cufft_utils.hpp  my_file_io_funcs.hpp  my_generators.hpp  my_utils.hpp  norm_auto_kernel.cuh  norm_autocorr_kernel.cuh  norm_autocorr_kernels.cuh  parse_args.hpp  pinned_allocator.hpp  pinned_mapped_allocator.hpp  pinned_mapped_vec_file_io_funcs.hpp  pinned_vec_file_io_funcs.hpp
my_cuda_utils/: CMakeLists.txt  my_cuda_utils.pc.in
my_cuda_utils/include/: device_allocator.hpp  man_vec_file_io_funcs.hpp  managed_allocator_global.hpp  managed_allocator_host.hpp  my_cuda_utils.hpp  pinned_allocator.hpp  pinned_mapped_allocator.hpp  pinned_mapped_vec_file_io_funcs.hpp  pinned_vec_file_io_funcs.hpp
my_cuda_utils/test/: CMakeLists.txt
my_cuda_utils/test/src/: main.cu
my_cufft_utils/: CMakeLists.txt  my_cufft_utils.pc.in
my_cufft_utils/include/: my_cufft_utils.hpp
my_cufft_utils/src/: my_cufft_utils.cpp
my_cufft_utils/test/: CMakeLists.txt
my_cufft_utils/test/src/: main.cu
my_utils/: CMakeLists.txt  my_utils.pc.in
my_utils/include/: my_file_io_funcs.hpp  my_utils.hpp
my_utils/src/: my_file_io_funcs.cpp  my_utils.cpp
my_utils/test/: CMakeLists.txt
my_utils/test/src/: main.cpp
src/: NormAutoGPU.cu  NormAutocorrGPU.cu  main.cpp  my_args.cpp  my_cuda_utils.cpp  my_cufft_utils.cpp  my_utils.cpp  norm_auto_kernel.cu  norm_autocorr_kernel.cu  norm_autocorr_kernels.cu  parse_args.cpp
test/: CMakeLists.txt
test/include/: parse_args.hpp
test/src/: main.cu
